remplacement anglais -> français

--- a/src/pages/buddies/buddies.html
+++ b/src/pages/buddies/buddies.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="hcolor">
-    <ion-title>Buddies</ion-title>
+    <ion-title>Restochatteurs</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -27,7 +27,7 @@
       <ion-item-options slide="left">
         <button ion-button color="primary" (click)="sendreq(key)">
           <ion-icon name="person-add"></ion-icon>
-          Add
+          AJOUT
         </button>
       </ion-item-options>
       
