--- a/src/pages/chats/chats.html
+++ b/src/pages/chats/chats.html
@@ -21,7 +21,7 @@
 <ion-content padding>
 <ion-list no-lines>
   <ion-list-header>
-    Requests
+    Requêtes
   </ion-list-header>
   <ion-item-sliding *ngFor="let item of myrequests">
     <ion-item>
@@ -33,16 +33,16 @@
     <ion-item-options>
       <button ion-button color="secondary" (click)="accept(item)">
         <ion-icon name="checkmark"></ion-icon>
-        ADD
+        AJOUT
       </button>
       <button ion-button color="danger" (click)="ignore(item)">
         <ion-icon name="trash"></ion-icon>
-        NOPE
+        REFUS
       </button>
     </ion-item-options>
   </ion-item-sliding>
   <ion-list-header>
-    Friends
+    Ami-es
   </ion-list-header>
   <ion-item *ngFor="let item of myfriends" (click)="buddychat(item)">
     <ion-avatar item-left>
