--- a/src/pages/groups/groups.html
+++ b/src/pages/groups/groups.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="hcolor">
-    <ion-title>Groups</ion-title>
+    <ion-title>Groupes</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="addgroup()">
         <ion-icon name="contacts"></ion-icon>
@@ -21,7 +21,7 @@
 <ion-content>
 <ion-list no-lines>
   <ion-list-header>
-    My Groups
+    Mes Groupes
   </ion-list-header>
   <ion-item *ngFor="let item of allmygroups">
     <ion-avatar item-left>
