--- a/src/pages/newgroup/newgroup.html
+++ b/src/pages/newgroup/newgroup.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="hcolor">
-    <ion-title>Add a New Group</ion-title>
+    <ion-title>Ajouter un nouveau groupe</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -21,10 +21,10 @@
   <h2 (click)="editgroupname()">{{newgroup.groupName}}</h2>
 </div>
 <div>
-  Tap on the pic or group name to change it.
+  Appuyez sur le nom de l'image ou du groupe pour le modifier.
 </div>
 <div class="spacer" style="height: 10px;"></div>
 <div>
-  <button ion-button round outline (click)="creategroup()">Create</button>
+  <button ion-button round outline (click)="creategroup()">Créer</button>
 </div>
 </ion-content>
