--- a/src/pages/passwordreset/passwordreset.html
+++ b/src/pages/passwordreset/passwordreset.html
@@ -12,15 +12,15 @@
 <ion-content class="background">
 <ion-card>
   <ion-card-header>
-    Password Reset
+    Réinitialiser le mot de passe
   </ion-card-header>
   <ion-card-content>
     <ion-list >
       <ion-item>
           <ion-input type="email" [(ngModel)]="email" placeholder="Email"></ion-input>
       </ion-item>
-      <button ion-button block round outline color="light" (click)="reset()">Reset my Password</button>
-      <button ion-button full clear color="light" (click)="goback()">Go Back</button>
+      <button ion-button block round outline color="light" (click)="reset()">Réinitialiser mon mot de passe</button>
+      <button ion-button full clear color="light" (click)="goback()">Retour</button>
     </ion-list>
   </ion-card-content>
 </ion-card>
