--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="hcolor">
-    <ion-title>Profile</ion-title>
+    <ion-title>Profil</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -21,10 +21,10 @@
   <h2 (click)="editname()">{{displayName}}</h2>
 </div>
 <div>
-  Tap on your pic or nick name to change it.
+  Tapez sur votre photo ou pseudo pour le changer.
 </div>
 <div class="spacer" style="height: 10px;"></div>
 <div>
-  <button ion-button round outline color="danger" (click)="logout()">Logout</button>
+  <button ion-button round outline color="danger" (click)="logout()">Déconnexion</button>
 </div>
 </ion-content>
