--- a/src/pages/buddychat/buddychat.html
+++ b/src/pages/buddychat/buddychat.html
@@ -42,7 +42,7 @@
 </ion-content>
 <ion-footer ion-fixed>    
   <ion-toolbar class="no-border" color="white">        
-    <ion-input [(ngModel)]="newmessage" placeholder="Write your message ..."></ion-input>  
+    <ion-input [(ngModel)]="newmessage" placeholder="Écris un message ..."></ion-input>  
     <ion-buttons end>
       <button ion-button (click)="addmessage()">
         <ion-icon name="send" color="primary"></ion-icon>
