--- a/src/pages/groupchat/groupchat.html
+++ b/src/pages/groupchat/groupchat.html
@@ -52,7 +52,7 @@
 </ion-content>
 <ion-footer ion-fixed>    
   <ion-toolbar class="no-border" color="white">        
-    <ion-input [(ngModel)]="newmessage" placeholder="Write your message ..."></ion-input>  
+    <ion-input [(ngModel)]="newmessage" placeholder="Écris ton message ..."></ion-input>  
     <ion-buttons end>
       <button ion-button (click)="addgroupmsg()">
         <ion-icon name="send" color="primary"></ion-icon>
