--- a/src/pages/groupmembers/groupmembers.html
+++ b/src/pages/groupmembers/groupmembers.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="hcolor">
-    <ion-title>Group Members</ion-title>
+    <ion-title>Les membres du groupe</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,7 +15,7 @@
 
 <ion-content>
   <ion-searchbar [(ngModel)]="searchstring" (input)="searchuser($event)"
-                  placeholder="Search">
+                  placeholder="Recherche">
   </ion-searchbar>
 <ion-list no-lines>
   <ion-item-sliding *ngFor="let key of groupmembers">
@@ -28,7 +28,7 @@
     <ion-item-options slide="left">
       <button ion-button color="danger" (click)="removemember(key)">
         <ion-icon name="trash"></ion-icon>
-        Remove
+        Supprimer
       </button>
     </ion-item-options>
   </ion-item-sliding>
