--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs color="hcolor">
   <ion-tab [root]="tab1" tabTitle="Chats" tabIcon="chatbubbles" tabsHideOnSubPages="true"></ion-tab>
-  <ion-tab [root]="tab2" tabTitle="Groups" tabIcon="contacts" tabsHideOnSubPages="true"></ion-tab>
-  <ion-tab [root]="tab3" tabTitle="Profile" tabIcon="contact"></ion-tab>
+  <ion-tab [root]="tab2" tabTitle="Groupes" tabIcon="contacts" tabsHideOnSubPages="true"></ion-tab>
+  <ion-tab [root]="tab3" tabTitle="Profil" tabIcon="contact"></ion-tab>
 </ion-tabs>
